Import of SAPER/NetworkInfo-Discovery-Rendezvous-0.03 from CPAN.
gitpan-cpan-distribution: NetworkInfo-Discovery-Rendezvous
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SAPER/NetworkInfo-Discovery-Rendezvous-0.03.tar.gz
gitpan-cpan-author:       SAPER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for NetworkInfo-Discovery-Rendezvous
 
+0.03    2004.11.16
+        Wrote the README.
+        Added tests to t/00load.t
+
 0.02    2004.10.18
         Updated documentation with a link to Net::Rendezvous RT ticket. 
         Improved t/20rendezvous.t so that it skips when not connected to the Internet. 
