--- a/README
+++ b/README
@@ -1,39 +1,35 @@
-NetworkInfo-Discovery-Rendezvous
+NetworkInfo::Discovery::Rendezvous
+==================================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+DESCRIPTION
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it get an idea of the modules uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
+    This module is an extension to NetworkInfo::Discovery which can find
+    services that register themselves using DNS-SD (DNS Service Discovery),
+    the services discovery protocol behind Apple Rendezvous.
+
 
 INSTALLATION
 
-To install this module, run the following commands:
+    To install this module, run the following commands:
 
-    perl Makefile.PL
-    make
-    make test
-    make install
+        perl Makefile.PL
+        make
+        make test
+        make install
 
 
-Alternatively, to install with Module::Build, you can use the following commands:
+    Alternatively, to install with Module::Build, you can use the 
+    following commands:
 
-    perl Build.PL
-    ./Build
-    ./Build test
-    ./Build install
+        perl Build.PL
+        ./Build
+        ./Build test
+        ./Build install
 
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
+    Copyright (C) 2004 Sébastien Aperghis-Tramoni
 
-Copyright (C) 2004 Sébastien Aperghis-Tramoni
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
+    This library is free software; you can redistribute it and/or modify
+    it under the same terms as Perl itself.
