Import of SAPER/NetworkInfo-Discovery-Rendezvous-0.04 from CPAN.
gitpan-cpan-distribution: NetworkInfo-Discovery-Rendezvous
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SAPER/NetworkInfo-Discovery-Rendezvous-0.04.tar.gz
gitpan-cpan-author:       SAPER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for NetworkInfo-Discovery-Rendezvous
 
+0.04    2004.12.30
+        Updated to follow Net::Rendezvous 0.90 API. 
+        Added t/00prereq.t
+
 0.03    2004.11.16
         Wrote the README.
         Added tests to t/00load.t
