--- a/Changes
+++ b/Changes
@@ -1,16 +1,20 @@
 Revision history for NetworkInfo-Discovery-Rendezvous
 
+0.05    2005.04.03
+        [TESTS] Updated t/20rendezvous.t
+        [TESTS] Corrected t/01api.t
+
 0.04    2004.12.30
-        Updated to follow Net::Rendezvous 0.90 API. 
-        Added t/00prereq.t
+        [NEW] Updated to follow Net::Rendezvous 0.90 API. 
+        [TESTS] Added t/00prereq.t
 
 0.03    2004.11.16
-        Wrote the README.
-        Added tests to t/00load.t
+        [DOC] Wrote the README.
+        [TESTS] Added tests to t/00load.t
 
 0.02    2004.10.18
-        Updated documentation with a link to Net::Rendezvous RT ticket. 
-        Improved t/20rendezvous.t so that it skips when not connected to the Internet. 
+        [DOC] Updated documentation with a link to Net::Rendezvous RT ticket. 
+        [TESTS] Improved t/20rendezvous.t so that it skips when not connected to the Internet. 
         Added eg/rvdisc.pl
         Added licenses texts. 
 
