Import of SAPER/NetworkInfo-Discovery-Rendezvous-0.06 from CPAN.
gitpan-cpan-distribution: NetworkInfo-Discovery-Rendezvous
gitpan-cpan-version:      0.06
gitpan-cpan-path:         SAPER/NetworkInfo-Discovery-Rendezvous-0.06.tar.gz
gitpan-cpan-author:       SAPER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,11 +1,15 @@
 Revision history for NetworkInfo-Discovery-Rendezvous
 
+0.06	2006.01.07
+        [BUGFIX] Net::Rendezvous API wasn't correctly used. 
+        [API] Added the get_services() method.
+
 0.05    2005.04.03
         [TESTS] Updated t/20rendezvous.t
         [TESTS] Corrected t/01api.t
 
 0.04    2004.12.30
-        [NEW] Updated to follow Net::Rendezvous 0.90 API. 
+        [CODE] Updated to follow Net::Rendezvous 0.90 API. 
         [TESTS] Added t/00prereq.t
 
 0.03    2004.11.16
